Edit about and index pages

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ layout: default
 
 <section>
     <h2>What is Learnmonkey?</h2>
-    <p>Learnmonkey is a free and open-source website dedicated to making free and high-quality educational content.</p>
+    <p>Learnmonkey is a free and open-source website dedicated to making free and high-quality educational content. Learnmonkey is licensed under the BSD 3-Clause License and is made using Jekyll.</p>
 </section>
 
 <section>
@@ -27,16 +27,11 @@ layout: default
 </section>
 
 <section>
+    <h2>Contact</h2>
+    <p>You can email us <a href="mailto:learnmonkey2@gmail.com">here</a>.</p>
+</section>
+
+<section>
     <h2>Translating</h2>
-    <p>Currently, Learnmonkey is only available in English, but we are currently working on <a href="/zh">a translation in Chinese</a>.</p>
-</section>
-
-<section>
-    <h2>Donating</h2>
-    <p>Learnmonkey doesn't have ads and will remain without ads. Currently, we do not accept donations, but in the future we will. In the meantime, consider contributing to a local charity and sharing Learnmonkey with your friends!</p>
-</section>
-
-<section>
-    <h2>Learnmonkey is Open Source!</h2>
-    <p>Learnmonkey is an open source project and it is licensed under the BSD 3-Clause  License.</p>
+    <p>Currently, Learnmonkey is only available in English, but we are currently working on <a href="https://learnmonkey.github.io/zh/">a translation in Chinese</a>.</p>
 </section>
