--- a/index.html
+++ b/index.html
@@ -16,4 +16,6 @@ layout: default
     <p>At Learnmonkey, we strive to provide high-quality educational content for free.</p>
     <h2>Contributing</h2>
     <p>Learnmonkey has a <a href="https://github.com/learnmonkey/learnmonkey.github.io">GitHub repository</a> and we would greatly appreciate it if you contributed through pull requests and issues. For more information, click <a href="/contributing/">here</a>.</p>
+    <h2>Contact</h2>
+    <p>You can email us <a href="mailto:learnmonkey2@gmail.com">here</a>.</p>
 </section>
