Edit about page

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ layout: default
 
 <section>
     <h2>Contributing</h2>
-    <p>To contribute to Learnmonkey, simply go to the <a href="https://github.com/learnmonkey/learnmonkey.github.io">GitHub repository</a> of Learnmonkey. There, you can make issues and pull requests.</p>
+    <p>Learnmonkey has a <a href="https://github.com/learnmonkey/learnmonkey.github.io">GitHub repository</a> and we would greatly appreciate it if you contributed through pull requests and issues. For more information, click <a href="/contributing/">here</a>.</p>
 </section>
 
 <section>
