edit about page

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ layout: default
 
 <section>
     <h2>Contact</h2>
-    <p>You can email us <a href="mailto:learnmonkey2@gmail.com">here</a>.</p>
+    <p>Our email address is <a href="mailto:learnmonkey2@gmail.com">learnmonkey2@gmail.com</a>.</p>
 </section>
 
 <section>
