--- a/programming/python/f-strings.html
+++ b/programming/python/f-strings.html
@@ -17,3 +17,5 @@ name = "John"
 age = 36
 txt = f"Hello! My name is {name}. I'm {age} years old."
 </code></pre>
+<p>Both of the codes return: </p>
+<samp>Hello! My name is John. I'm 36 years old.</samp>
