--- a/programming/python/fastapi/index.html
+++ b/programming/python/fastapi/index.html
@@ -8,16 +8,6 @@ permalink: /programming/python/fastapi/
 
 <section>
     <h2>What is FastAPI?</h2>
-    <p>FastAPI is a <a href="/programming/python/">Python</a> web framework module. It's used for making API applications and uses simple HTTP requests and routes. FastAPI is very simple and fast to get started with, as the name suggests. Some pros of using FastAPI are:</p>
-    <ul>
-        <li>Fast</li>
-        <li>Fast to code</li>
-        <li>Fewer bugs</li>
-        <li>Intuitive</li>
-        <li>Easy</li>
-        <li>Short</li>
-        <li>Robust</li>
-        <li>Standards-based</li>
-    </ul>
+    <p>FastAPI is a <a href="/programming/python/">Python</a> web framework module. It's used for making API applications and uses simple HTTP requests and routes. FastAPI is very simple and fast to get started with, as the name suggests. FastAPI is also, as the name suggests, very fast.</p>
     <img src="/images/programming/python/fastapi/logo.png" alt="FastAPI Logo" style="width:65%;height:65%;">
 </section>
