update fastapi intro

--- a/programming/python/fastapi/index.html
+++ b/programming/python/fastapi/index.html
@@ -8,6 +8,11 @@ permalink: /programming/python/fastapi/
 
 <section>
     <h2>What is FastAPI?</h2>
-    <p>FastAPI is a <a href="/programming/python/">Python</a> web framework module. It's used for making API applications and uses simple HTTP requests and routes. FastAPI is very simple and fast to get started with, as the name suggests. FastAPI is also, as the name suggests, very fast.</p>
+    <p>FastAPI is a <a href="/programming/python/">Python</a> web framework module. It's used for making API applications and uses simple HTTP requests and routes.</p>
     <img src="/images/programming/python/fastapi/logo.png" alt="FastAPI Logo" style="width:65%;height:65%;">
+</section>
+
+<section>
+    <h2>Why use FastAPI?</h2>
+    <p>FastAPI is very simple and fast to get started with. FastAPI is also very fast.</p>
 </section>
