Python tuples expand

--- a/programming/golang/arrays.html
+++ b/programming/golang/arrays.html
@@ -32,7 +32,7 @@ array_name := [...]datatype{values} // array's length will be inferred, also, yo
 
 <section>
     <h2>Accessing Array Elements</h2>
-    <p>To access and set array elements, we use array indices. Array indices start at zero for the first element and the index goes up by one for every element we go. For example, the element with array index 2 is the third element and the element with array element 4 is the fifth element.</p>
+    <p>To access and set array elements, we use array indices. Array indices start at zero for the first element and go up by one for each element. For example, the element with array index 2 is the third element and the element with array element 4 is the fifth element.</p>
     <p>To access an array element, we type:</p>
     <code class="language-go">
 <i>array</i>[<i>index</i>]
