--- a/programming/python/tuples.html
+++ b/programming/python/tuples.html
@@ -8,15 +8,18 @@ permalink: /programming/python/tuples/
 
 <section>
     <h2>What are Tuples?</h2>
-    <p>Tuples are the same as lists in most aspects. For example, you can put whatever you want in tuples. However, you cannot change the tuple whatsoever once you make it.</p>
+    <p>Tuples are the same as lists in most aspects. For example, you can put whatever you want in tuples and tuples are ordered. However, you can't change the tuple once you create it. In other words, tuples are <em>immutable</em>.</p>
 </section>
 
 <section>
-    <h2>How to Make Lists?</h2>
-    <p>It's the same as lists, but we use parentheses (<code>(</code> and <code>)</code>) instead of square brackets. We seperate the items in the tuple by commas.</p>
+    <h2>Making Tuples</h2>
+    <p>It's the same as lists, but we use parentheses (<code>(</code> and <code>)</code>) instead of square brackets. We seperate the items in the tuple by commas. For example: </p>
+    <code class="language-python">my_tuple = ("Learnmonkey", 43, True, 314.41)</code>
 </section>
 
 <section>
     <h2>Getting an Element</h2>
-    <p>Getting an element is the exact same in tuples as in lists. We do <code>tuple[index]</code>, where <code>tuple</code> is the tuple variable and <code>index</code> is the index of the element. Indexes start at zero for the first element and go up by one for each element.</p>
+    <p>To access a tuple element, we type: </p>
+    <code class="language-python"><i>tuple</i>[<i>index</i>]</code>
+    <p><code><i>tuple</i></code> is the name of the tuple variable and <code><i>index</i></code> is the index of the element. Indexes start at zero for the first element and go up by one for each element. For example, the element with array index 2 is the third element and the element with array element 4 is the fifth element.</p>
 </section>
