add example code

--- a/programming/python/tuples.html
+++ b/programming/python/tuples.html
@@ -22,4 +22,16 @@ permalink: /programming/python/tuples/
     <p>To access a tuple element, we type: </p>
     <code class="language-python"><i>tuple</i>[<i>index</i>]</code>
     <p><code><i>tuple</i></code> is the name of the tuple variable and <code><i>index</i></code> is the index of the element. Indexes start at zero for the first element and go up by one for each element. For example, the element with array index 2 is the third element and the element with array element 4 is the fifth element.</p>
+    <p>For example: </p>
+    <pre><code class="language-python">
+my_tuple = ("Learnmonkey", 43, True, 314.41)
+print(my_tuple[0])
+print(my_tuple[2])
+print(my_tuple[3])
+    </code></pre>
+    <p>The above code returns: </p>
+    <pre><samp>
+Learnmonkey
+True
+314.41</samp></pre>
 </section>
