--- a/programming/python/requests.html
+++ b/programming/python/requests.html
@@ -20,3 +20,10 @@ permalink: /programming/python/requests/
     <code class="language-python">import requests</code>
     <p>If it works, you can now start using the <code>requests</code> module!</p>
 </section>
+
+<section>
+    <h2>Making GET Requests</h2>
+    <p>GET requests simply request data from a server. The data could be HTML (for websites), JSON (APIs), or even XML. In fact, your browser sends a GET request every time you visit a website. To send a GET request, we type the following: </p>
+    <code class="language-python">requests.get("<i>URL</i>")</code>
+    <p>The function returns a response object.</p>
+</section>
