--- a/programming/python/requests.html
+++ b/programming/python/requests.html
@@ -26,4 +26,28 @@ permalink: /programming/python/requests/
     <p>GET requests simply request data from a server. The data could be HTML (for websites), JSON (APIs), or even XML. In fact, your browser sends a GET request every time you visit a website. To send a GET request, we type the following: </p>
     <code class="language-python">requests.get("<i>URL</i>")</code>
     <p>The function returns a response object.</p>
+    <p>For example: </p>
+    <pre><code class="language-python">
+import requests
+response = requests.get("https://learnmonkey.github.io")
+    </code></pre>
+    <p>Once we have our response object, we can get the status code: </p>
+    <code class="language-python">print(requests.status_code)</code>
+    <p>Output:</p>
+    <samp>200</samp>
+    <small>Note: A 200 status code means OK, so everything went smoothly.</small>
+    <p>We can also get the HTML (or whatever data) that was returned: </p>
+    <code class="language-python">print(requests.text)</code>
+    <p>The code returns all of the HTML of the page: </p>
+    <pre><samp>
+&lt;!doctype html>
+&lt;html lang="en">&lt;head>
+    &lt;title>Home | Learnmonkey&lt;/title>
+    &lt;meta charset="utf-8">
+    &lt;meta name="viewport" content="width=device-width, initial-scale=1">
+&lt;!--     &lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"> -->
+    &lt;script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js">&lt;/script>
+    &lt;script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js">&lt;/script>
+    &lt;link rel="stylesheet" href="/assets/css/style.css"></samp></pre>
+    <p>The actual output goes much longer, so we've removed most of it.</p>
 </section>
