add quick note on output

--- a/programming/python/requests.html
+++ b/programming/python/requests.html
@@ -56,5 +56,5 @@ print(page_that_does_not_exist.status_code)
     &lt;script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js">&lt;/script>
     &lt;script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js">&lt;/script>
     &lt;link rel="stylesheet" href="/assets/css/style.css"></samp></pre>
-    <p>The actual output goes much longer, so we've removed most of it.</p>
+    <small>The actual output is quite large, so it's been limited to only the first few lines.</small>
 </section>
