--- a/programming/python/f-strings.html
+++ b/programming/python/f-strings.html
@@ -17,5 +17,6 @@ name = "John"
 age = 36
 txt = f"Hello! My name is {name}. I'm {age} years old."
 </code></pre>
+<small><i class="fas fa-exclamation-circle"></i>Keep in mind that f-strings were only added in Python 3.6, so f-strings will only work if your Python version is above Python 3.6!</small>
 <p>Both of the codes return: </p>
 <samp>Hello! My name is John. I'm 36 years old.</samp>
