--- a/programming/python/fastapi/setup.html
+++ b/programming/python/fastapi/setup.html
@@ -11,5 +11,5 @@ permalink: /programming/python/fastapi/setup/
 <small>If PIP doesn't work, read our <a href="/programming/python/articles/troubleshooting-pip/">Troubleshooting PIP</a> article.</small>
 <p>The above command installs FastAPI and all of its optional dependencies.</p>
 <p>To test if you installed FastAPI correctly, run the following Python script: </p>
-<code class="language-python">import fastapi</code>
+<pre><code class="language-python">import fastapi</code></pre>
 <p>If you don't get an error, you can now start using FastAPI!</p>
