--- a/programming/python/tuples.html
+++ b/programming/python/tuples.html
@@ -14,13 +14,13 @@ permalink: /programming/python/tuples/
 <section>
     <h2>Making Tuples</h2>
     <p>It's the same as lists, but we use parentheses (<code>(</code> and <code>)</code>) instead of square brackets. We seperate the items in the tuple by commas. For example: </p>
-    <code class="language-python">my_tuple = ("Learnmonkey", 43, True, 314.41)</code>
+    <pre><code class="language-python">my_tuple = ("Learnmonkey", 43, True, 314.41)</code></pre>
 </section>
 
 <section>
     <h2>Getting an Element</h2>
     <p>To access a tuple element, we type: </p>
-    <code class="language-python"><i>tuple</i>[<i>index</i>]</code>
+    <pre><code class="language-python"><i>tuple</i>[<i>index</i>]</code></pre>
     <p><code><i>tuple</i></code> is the name of the tuple variable and <code><i>index</i></code> is the index of the element. Indexes start at zero for the first element and go up by one for each element. For example, the element with array index 2 is the third element and the element with array element 4 is the fifth element.</p>
     <p>For example: </p>
     <pre><code class="language-python">
