Add if/else to Python layout

--- a/programming/python/if-else.html
+++ b/programming/python/if-else.html
@@ -4,7 +4,7 @@ title: Python If and Else
 permalink: /programming/python/if-else/
 ---
 
-<h1>Python If and Else</h1>
+<h1>Python If/Else</h1>
 
 <section>
     <h2>What are <code>if</code> and <code>else</code> Statements?</h2>
