Python sets page

--- a/programming/python/lists.html
+++ b/programming/python/lists.html
@@ -8,7 +8,7 @@ permalink: /programming/python/lists/
 
 <section>
     <h2>What are Lists?</h2>
-    <p>Lists in Python are basically just lists of elements. The elements can be literally anything: strings, numbers, you name it. You can add and remove elements from lists.</p>
+    <p>Lists in Python are basically just lists of elements. The elements can be anything: strings, numbers, you name it. You can add and remove elements from lists.</p>
 </section>
 
 <section>
