python pass statement

--- a/programming/python/if-else.html
+++ b/programming/python/if-else.html
@@ -28,5 +28,11 @@ permalink: /programming/python/if-else/
 
 <section>
     <h2>The <code>pass</code> statement</h2>
-    <p></p>
+    <p>In Python, if statements can't be empty so we use the <code>pass</code> statement to tell Python to do nothing so that Python won't raise an error: </p>
+    <pre><code class="language-python">
+a = 10
+b = 50
+if b > a:
+    pass
+    </code></pre>
 </section>
