python tuples edit

--- a/programming/python/tuples.html
+++ b/programming/python/tuples.html
@@ -8,7 +8,7 @@ permalink: /programming/python/tuples/
 
 <section>
     <h2>What are Tuples?</h2>
-    <p>Tuples are the same as lists in most aspects. For example, you can put whatever you want in tuples and tuples are ordered. However, you can't change the tuple once you create it. In other words, tuples are <em>immutable</em>.</p>
+    <p>Tuples are ordered collections of things, just like lists. You can also put any data type you want in a tuple and you can also mix data types. However, you can't change the tuple once you create it. In other words, tuples are <em>immutable</em>.</p>
 </section>
 
 <section>
