--- a/programming/python/lists.html
+++ b/programming/python/lists.html
@@ -8,12 +8,12 @@ permalink: /programming/python/lists/
 
 <section>
     <h2>What are Lists?</h2>
-    <p>Lists in Python are basically just lists of elements. The elements can be anything: strings, numbers, you name it. You can add and remove elements from lists.</p>
+    <p>Lists are ordered collections of elements. The elements can have any data type and you can mix data types. You can set, create, and remove elements.</p>
 </section>
 
 <section>
     <h2>How to Make Lists?</h2>
-    <p>It's quite simple. We just seperate our elements with commas and wrap the entire thing in square brackets (<code>[</code> and <code>]</code>), which tells Python that we're making a list. We can put whatever we want in there.</p>
+    <p>To make lists, we seperate our elements with commas and wrap the entire thing in square brackets (<code>[</code> and <code>]</code>), which tells Python that we're making a list. We can put whatever we want in there.</p>
 </section>
 
 <section>
