add code example

--- a/programming/python/lists.html
+++ b/programming/python/lists.html
@@ -13,7 +13,8 @@ permalink: /programming/python/lists/
 
 <section>
     <h2>How to Make Lists?</h2>
-    <p>To make lists, we seperate our elements with commas and wrap the entire thing in square brackets (<code>[</code> and <code>]</code>), which tells Python that we're making a list. We can put whatever we want in there.</p>
+    <p>To make lists, we seperate our elements with commas and wrap the entire thing in square brackets (<code>[</code> and <code>]</code>), which tells Python that we're making a list. We can put whatever we want in there. For example: </p>
+    <pre><code class="language-python">my_list = ["Learnmonkey", 25, 8.452, False]</code></pre>
 </section>
 
 <section>
