accessing list elements section

--- a/programming/python/lists.html
+++ b/programming/python/lists.html
@@ -18,7 +18,20 @@ permalink: /programming/python/lists/
 </section>
 
 <section>
-    <h2>Getting and Setting a Value</h2>
-    <p>Getting an element in a list is easy. You do it like this: <code>list[index]</code>. You replace <code>list</code> with the name of the list variable of <code>index</code> with the index of the element in the list. Indexes start at 0 for the first element and keep going up by one.</p>
-    <p>Setting a value is almost exactly the same as setting one. We simply set the element to something. So, we do <code>list[index] = value</code>. It's exactly the same as last time, but we replace value with the value we want to set.</p>
+    <h2>Accessing List Elements</h2>
+    <p>To access a list element, we type: </p>
+    <pre><code class="language-python"><i>list</i>[<i>index</i>]</code></pre>
+    <p><code><i>list</i></code> is the name of the list variable and <code><i>index</i></code> is the index of the element. Indexes start at zero for the first element and go up by one for each element. For example, the element with array index 2 is the third element and the element with array element 4 is the fifth element.</p>
+    <p>For example: </p>
+    <pre><code class="language-python">
+my_list = ["Learnmonkey", 25, 8.452, False]
+print(my_tuple[0])
+print(my_tuple[2])
+print(my_tuple[3])
+    </code></pre>
+    <p>The above code returns: </p>
+    <pre><samp>
+Learnmonkey
+8.542
+False</samp></pre>
 </section>
