setting list elements section

--- a/programming/python/lists.html
+++ b/programming/python/lists.html
@@ -35,3 +35,10 @@ Learnmonkey
 8.542
 False</samp></pre>
 </section>
+
+<section>
+    <h2>Setting List Elements</h2>
+    <p>To set a list element, we type: </p>
+    <pre><code class="language-python"><i>list</i>[<i>index</i>] = <i>value</i></code></pre>
+    <p><code><i>list</i></code> is the name of the list variable, <code><i>index</i></code> is the index of the element, and <code><i>value</i></code> is the value you want to set the element.</p>
+</section>
