fix example code

--- a/programming/python/lists.html
+++ b/programming/python/lists.html
@@ -25,9 +25,9 @@ permalink: /programming/python/lists/
     <p>For example: </p>
     <pre><code class="language-python">
 my_list = ["Learnmonkey", 25, 8.452, False]
-print(my_tuple[0])
-print(my_tuple[2])
-print(my_tuple[3])
+print(my_list[0])
+print(my_list[2])
+print(my_list[3])
     </code></pre>
     <p>The above code returns: </p>
     <pre><samp>
