Add example code

--- a/programming/python/lists.html
+++ b/programming/python/lists.html
@@ -40,5 +40,13 @@ False</samp></pre>
     <h2>Setting List Elements</h2>
     <p>To set a list element, we type: </p>
     <pre><code class="language-python"><i>list</i>[<i>index</i>] = <i>value</i></code></pre>
-    <p><code><i>list</i></code> is the name of the list variable, <code><i>index</i></code> is the index of the element, and <code><i>value</i></code> is the value you want to set the element.</p>
+    <p><code><i>list</i></code> is the name of the list variable, <code><i>index</i></code> is the index of the element, and <code><i>value</i></code> is the value you want to set the element. For example: </p>
+    <pre><code class="language-python">
+my_list = ["Learnmonkey", 25, 8.452, False]
+my_list[0] = "Stack Overflow"
+my_list[2] = 3.141
+print(my_list)
+    </code></pre>.
+    <p>The above code returns: </p>
+    <samp>['Stack Overflow', 25, 3.141, False]</samp>
 </section>
