--- a/programming/python/environment-setup.html
+++ b/programming/python/environment-setup.html
@@ -15,7 +15,7 @@ permalink: /programming/python/environment-setup/
     <p>After clicking the yellow button, the Python installer should be downloaded. Double click on it to run the installer. Now, the below should pop up:</p>
     <img src="/images/programming/python/python-installer-1.png" alt="The Python Installer Window">
     <p>Simply click "Install Now".</p>
-    <p>Note: it is very important is check "Add to Path".</p>
+    <small>Note: it is very important is check "Add to Path". If you don't do it, you won't be able to run Python in the command line!</small>
     <p>Now, Python should be installing and there should be a green bar indicating the installation progress.</p>
     <img src="/images/programming/python/python-installer-2.png" alt="Python is installing...">
     <p>After the green progress bar has reached its end, you should see this window: </p>
