--- a/programming/python/fastapi/first-api.html
+++ b/programming/python/fastapi/first-api.html
@@ -36,7 +36,7 @@ INFO:     Started server process [28722]
 INFO:     Waiting for application startup.
 INFO:     Application startup complete.</samp></pre>
     <p>You should now be able to go to <a href="http://127.0.0.1:8000">127.0.0.1:8000</a> and see: </p>
-    <pre><samp>{"message":"Hello FastAPI!"}</samp></pre>
+    <pre><code class="language-json">{"message":"Hello FastAPI!"}</code></pre>
 </section>
 
 <section>
