--- a/programming/python/fastapi/first-api.html
+++ b/programming/python/fastapi/first-api.html
@@ -41,7 +41,7 @@ INFO:     Application startup complete.</samp></pre>
 
 <section>
     <h2>Interactive API Docs</h2>
-    <p>One cool feature of FastAPI is that when you make your API, FastAPI automatically generates interactive API docs. You can find it by going to <a href="http://127.0.0.1:8000/docs">127.0.0.1:8000/docs</a>. If you don't like that, there is an alternative version which you can find by going to <a href="http://127.0.0.1:8000/redoc">127.0.0.1:8000/redoc</a>.</p>
+    <p>One cool feature of FastAPI is that when you make your API, FastAPI automatically generates interactive API docs. You can find it by going to <a href="http://127.0.0.1:8000/docs">127.0.0.1:8000/docs</a>. If you don't like it, there is an alternative version which you can find by going to <a href="http://127.0.0.1:8000/redoc">127.0.0.1:8000/redoc</a>.</p>
     <p>FastAPI generates these API docs by first generating a <em>schema</em> for your API. This schema is called OpenAPI. The two interactive API docs are powered by OpenAPI. OpenAPI can also be used to generate code that interact with your API. You can find the raw OpenAPI schema at <a href="http://127.0.0.1:8000/openapi.json">127.0.0.1:8000/openapi.json</a>.</p>
 </section>
 
