--- a/astronomy/stars.html
+++ b/astronomy/stars.html
@@ -7,5 +7,6 @@ layout: astronomy
 
 <section>
     <h2>What are Stars?</h2>
-    <p></p>
+    <p>When you look outside, stars look like tiny dots of light, maybe with twinkling. However, in reality, stars are titanic spheres that emit enormous amounts of energy in the form of light and heat. Below is an image of the Sun, which is a star: </p>
+    <img src="/images/astronomy/sun.png" alt="False color image of the sun">
 </section>
