--- a/astronomy/stars.html
+++ b/astronomy/stars.html
@@ -7,6 +7,12 @@ layout: astronomy
 
 <section>
     <h2>What are Stars?</h2>
-    <p>When you look outside, stars look like tiny dots of light, maybe with twinkling. However, in reality, stars are titanic spheres that emit enormous amounts of energy in the form of light and heat. Below is an image of the Sun, which is a star: </p>
+    <p>When you look outside, stars look like tiny dots of light, maybe with some twinkling. However, in reality, stars are titanic spheres that emit enormous amounts of energy in the form of light and heat. Below is an image of the Sun, which is a star: </p>
     <img src="/images/astronomy/sun.png" alt="False color image of the sun">
+</section>
+
+<section>
+    <h2>How do Stars Produce Their Energy?</h2>
+    <p>Stars produce their energy via a process called <em>nuclear fusion</em>, which works by squeezing together hydrogen atoms until they turn into a helium atom. This releases a huge amount of energy. This reaction is called the proton-proton chain reaction. Nuclear fusion happens in the core of stars.</p>
+    <img src="/images/astronomy/proton-proton-chain.png" alt="The proton-proton chain reaction, which happens at in the cores of stars">
 </section>
