--- a/astronomy/stars.html
+++ b/astronomy/stars.html
@@ -14,5 +14,5 @@ layout: astronomy
 <section>
     <h2>How do Stars Produce Their Energy?</h2>
     <p>Stars produce their energy via a process called <em>nuclear fusion</em>, which works by squeezing together hydrogen atoms until they turn into a helium atom. This releases a huge amount of energy. This reaction is called the proton-proton chain reaction. Nuclear fusion happens in the core of stars.</p>
-    <img src="/images/astronomy/proton-proton-chain.png" alt="The proton-proton chain reaction, which happens at in the cores of stars">
+    <img src="/images/astronomy/proton-proton-chain.png" alt="A diagram of the proton-proton chain reaction">
 </section>
