--- a/astronomy/stars.html
+++ b/astronomy/stars.html
@@ -13,6 +13,6 @@ layout: astronomy
 
 <section>
     <h2>How Stars Produce Energy</h2>
-    <p>Stars produce their energy via a process called <em>nuclear fusion</em>, which works by squeezing together hydrogen atoms until they turn into a helium atom. This releases a huge amount of energy. This reaction is called the proton-proton chain reaction. Nuclear fusion happens in the core of stars.</p>
+    <p>Stars produce their energy via a process called <em>nuclear fusion</em>, which happens in the cores of stars. It works by squeezing together hydrogen atoms until they turn into a helium atom This releases a huge amount of energy. This reaction is called the proton-proton chain reaction.</p>
     <img src="/images/astronomy/proton-proton-chain.png" alt="A diagram of the proton-proton chain reaction">
 </section>
