--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -11,6 +11,7 @@ layout: default
         <ul>
             <li><a href="/programming/python/">Python</a>
                 <ul>
+                    <li><a href="/programming/python/data-structures-and-algorithms/">Python Data Structures And Algorithms</a></li>
                     <li><a href="/programming/python/cool-projects/">Cool Python Projects</a></li>
                     <li><a href="/programming/python/flask/">Flask</a></li>
                     <li><a href="/programming/python/pygame/">Pygame</a></li>
