--- a/programming/python/data-structures-and-algorithms/binary-search.html
+++ b/programming/python/data-structures-and-algorithms/binary-search.html
@@ -1,1 +1,7 @@
+---
+layout: python-data-alg
+title: Data Structures And Algorithms
+permalink: /programming/python/data-structures-and-algorithms/
+---
 
+<h1>Introduction to Data Structures And Algorithms In Python</h1>
