--- a/programming/python/data-structures-and-algorithms/searching.html
+++ b/programming/python/data-structures-and-algorithms/searching.html
@@ -1,7 +1,7 @@
 ---
 layout: python-data-alg
-title: Data Structures And Algorithms
-permalink: /programming/python/data-structures-and-algorithms/
+title: Searching
+permalink: /programming/python/data-structures-and-algorithms/searching/
 ---
 
-<h1>Introduction to Data Structures And Algorithms In Python</h1>
+<h1>Searching</h1>
