update tutorial index

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -52,5 +52,6 @@ layout: default
             <li><a href="/math/calculus/">Calculus</a></li>-->
         </ul>
     </li>
+    <li><a href="/astronomy/">Astronomy</a></li>
 </ul>
 
