add simple page

--- a/programming/python/data-structures-and-algorithms/index.html
+++ b/programming/python/data-structures-and-algorithms/index.html
@@ -5,3 +5,14 @@ permalink: /programming/python/data-structures-and-algorithms/
 ---
 
 <h1>Introduction to Data Structures And Algorithms In Python</h1>
+<p>In this tutorial series, we'll a crucial part of programming: Data Structures And Algorithms. Every programming question and programming interview, you are almost guaranteed to need Data Structures And Algorithms to solve the coding questions. So, it is important to learn about Data Structures And Algorithms.</p>
+
+<section>
+    <h2>What are Data Structures?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>What are Algorithms?</h2>
+    <p></p>
+</section>
