--- a/astronomy/constellations.html
+++ b/astronomy/constellations.html
@@ -4,3 +4,8 @@ permalink: /astronomy/constellations/
 layout: astronomy
 ---
 <h1>Constellations</h1>
+
+<section>
+    <h2>What is a Constellation?</h2>
+    <p>A constellation is a pattern of stars. At many different points in time, different people have identified different constellations. These constellations are often related to mythology.</p>
+</section>
