--- a/programming/python/data-structures-and-algorithms/index.html
+++ b/programming/python/data-structures-and-algorithms/index.html
@@ -14,5 +14,5 @@ permalink: /programming/python/data-structures-and-algorithms/
 
 <section>
     <h2>What are Algorithms?</h2>
-    <p></p>
+    <p>Algorithms are</p>
 </section>
