--- a/programming/python/data-structures-and-algorithms/index.html
+++ b/programming/python/data-structures-and-algorithms/index.html
@@ -14,5 +14,5 @@ permalink: /programming/python/data-structures-and-algorithms/
 
 <section>
     <h2>What are Algorithms?</h2>
-    <p>Algorithms are ways to calculate data or loop over something.</p>
+    <p>Algorithms are ways to calculate data or loop over something. For example, we might write an algorithm to find the average of a list of numbers, or create an algorithm to find the number of valid chess moves in a position. Algorithms can be both complex and simple. It is important for us to understand different algorithms because they make our lives much easier.</p>
 </section>
