new page sections

--- a/programming/python/data-structures-and-algorithms/searching.html
+++ b/programming/python/data-structures-and-algorithms/searching.html
@@ -5,3 +5,19 @@ permalink: /programming/python/data-structures-and-algorithms/searching/
 ---
 
 <h1>Searching</h1>
+<p>In this tutorial, we'll learn about <i>searching algorithms</i>.</p>
+
+<section>
+    <h2>What is Searching?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Why use Searching?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Differnet Searching Algorithms</h2>
+    <p></p>
+</section>
