--- a/programming/python/data-structures-and-algorithms/searching.html
+++ b/programming/python/data-structures-and-algorithms/searching.html
@@ -18,6 +18,6 @@ permalink: /programming/python/data-structures-and-algorithms/searching/
 </section>
 
 <section>
-    <h2>Differnet Searching Algorithms</h2>
+    <h2>Different Searching Algorithms</h2>
     <p></p>
 </section>
