--- a/programming/python/data-structures-and-algorithms/searching.html
+++ b/programming/python/data-structures-and-algorithms/searching.html
@@ -5,7 +5,7 @@ permalink: /programming/python/data-structures-and-algorithms/searching/
 ---
 
 <h1>Searching</h1>
-<p>In this tutorial, we'll learn about <i>searching algorithms</i>.</p>
+<p>In this tutorial, we'll learn about <i>searching</i> and <i>search algorithms</i>.</p>
 
 <section>
     <h2>What is Searching?</h2>
@@ -18,6 +18,6 @@ permalink: /programming/python/data-structures-and-algorithms/searching/
 </section>
 
 <section>
-    <h2>Different Searching Algorithms</h2>
+    <h2>Different Search Algorithms</h2>
     <p></p>
 </section>
