--- a/programming/python/pygame/first-game.html
+++ b/programming/python/pygame/first-game.html
@@ -35,7 +35,7 @@ pygame<span style='color:#808030; '>.</span>quit<span style='color:#808030; '>(<
 
 <section>
   <h2>Code Breakdown</h2>
-  <p>Now, we will break down the code!</p>
+  <p>Now, let's break down the code!</p>
   <p>First of all, we need to import Pygame using <pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>import</span> pygame</pre>
   <p>Without it, we wouldn't be able to use Pygame. If you get an error, however, that Pygame isn't defined, then make sure that you correctly <a href="/programming/python/pygame/setup">setup</a> Pygame.</p>
   <p>On the next line, we have <pre style='color:#000000;background:#ffffff;'>pygame.init()</pre> which initializes Pygame. Without it, we won't be able to use Pygame for our games. It is often a good idea to write this line of code at the front of your code after all of your imports.</p>
