--- a/programming/python/data-structures-and-algorithms/searching.html
+++ b/programming/python/data-structures-and-algorithms/searching.html
@@ -9,7 +9,7 @@ permalink: /programming/python/data-structures-and-algorithms/searching/
 
 <section>
     <h2>What is Searching?</h2>
-    <p></p>
+    <p>In programming, Searching is ver important, but why? Well, let's say you recorded the favorite number of <var>n</var> people, and you want to find the first person who likes the same number as you, <i>32</i>. Sure, you could read over the list and find the number <i>32</i>, but that would take long. You can imagine that reading even a hundred numbers can be time-consuming, and you may even have bigger data sets of numbers. THis is when Searching comes in. We can write simple programs to find occurences of data for us.</p>
 </section>
 
 <section>
