--- a/programming/python/data-structures-and-algorithms/big-o-notation.html
+++ b/programming/python/data-structures-and-algorithms/big-o-notation.html
@@ -8,7 +8,7 @@ permalink: /programming/python/data-structures-and-algorithms/big-o-notation/
 
 <section>
     <h2>What is Big O Notation?</h2>
-    <p></p>
+    <p>Big O notation is used to describe how something increases as we increase the input to a program or algorithm. Big O notation can be used to measure <em>time complexity</em> (the time a program takes to run) or <em>space complexity</em> (the memory a program takes).</p>
 </section>
 
 <section>
