star lifecycle section

--- a/astronomy/stars.html
+++ b/astronomy/stars.html
@@ -16,3 +16,8 @@ layout: astronomy
     <p>Stars produce their energy via a process called <em>nuclear fusion</em>, which happens in the cores of stars. It works by squeezing together hydrogen atoms until they turn into a helium atom This releases a huge amount of energy. As you'd imagine, it takes a very big star and a <strong>LOT</strong> of energy (heat) to make nuclear fusion happen. This reaction is called the <em>proton-proton chain reaction</em>.</p>
     <img src="/images/astronomy/proton-proton-chain.png" alt="A diagram of the proton-proton chain reaction">
 </section>
+
+<section>
+    <h2>The Lifecycle of a Star</h2>
+    <p>Stars start from giant clouds of gas, called <em>nebulae</em> (the singular form in <em>nebula</em>). Nebulae are mostly made up of hydrogen and helium.</p>
+</section>
