--- a/programming/python/data-structures-and-algorithms/searching.html
+++ b/programming/python/data-structures-and-algorithms/searching.html
@@ -9,13 +9,12 @@ permalink: /programming/python/data-structures-and-algorithms/searching/
 
 <section>
     <h2>What is Searching?</h2>
-    <p>In programming, searching is simply looking for an element or a collection of elements in a Data STructure, normally a list. It's like looking for an recipe in a cookbook.</p>
+    <p>In programming, searching is simply looking for an element or a collection of elements in a Data Structure, normally a list. It's like looking for an recipe in a cookbook.</p>
     </section>
 
 <section>
     <h2>Why use Searching?</h2>
     <p>In programming, Searching is very important, but why? Well, let's say you recorded the favorite number of <var>n</var> people, and you want to find the first person who likes the same number as you, <i>32</i>. Sure, you could read over the list and find the number <i>32</i>, but that would take long. You can imagine that reading even a hundred numbers can be time-consuming, and you may even have bigger data sets of numbers. This is when Searching comes in. We can write simple programs to find occurences of data for us.</p>
-
 </section>
 
 <section>
