star composition section

--- a/astronomy/stars.html
+++ b/astronomy/stars.html
@@ -18,6 +18,11 @@ layout: astronomy
 </section>
 
 <section>
+    <h2>Composition of Stars</h2>
+    <p>Stars are about 90% hydrogen and 10% helium. The element helium was actually first discovered in the sun. Tiny traces of heavier elements can also be found.</p>
+</section>
+
+<section>
     <h2>The Lifecycle of a Star</h2>
     <p>Stars start from giant clouds of gas, called <em>nebulae</em> (the singular form in <em>nebula</em>). Nebulae are mostly made up of hydrogen and helium.</p>
 </section>
