--- a/astronomy/stars.html
+++ b/astronomy/stars.html
@@ -24,5 +24,7 @@ layout: astronomy
 
 <section>
     <h2>The Lifecycle of a Star</h2>
-    <p>Stars start from giant clouds of gas, called <em>nebulae</em> (the singular form in <em>nebula</em>). Nebulae are mostly made up of hydrogen and helium.</p>
+    <p>Stars start from giant clouds of gas, called <em>nebulae</em> (the singular form in <em>nebula</em>). Nebulae are mostly made up of hydrogen and helium, with traces of heavier elements. This composition is reflected in the composition of stars.</p>
+    <img src="/images/astronomy/hubble-crab-nebula.png" alt="The Crab Nebula captured by the Hubble Space Telescope">
+    <p>The gas and other particle clump together to form proto-stars after a period of time.</p>
 </section>
