--- a/astronomy/stars.html
+++ b/astronomy/stars.html
@@ -9,6 +9,7 @@ layout: astronomy
     <h2>What are Stars?</h2>
     <p>When you look outside, stars look like tiny dots of light, maybe with some twinkling. However, in reality, stars are titanic spheres that emit enormous amounts of energy in the form of light and heat. Below is an image of the Sun, which is a star: </p>
     <img src="/images/astronomy/sun.png" alt="False color image of the sun">
+    <p>Stars are some of the most numerous objects in the universe; there are 200-400 billion stars in the Milky Way alone.</p>
 </section>
 
 <section>
@@ -26,5 +27,5 @@ layout: astronomy
     <h2>The Lifecycle of a Star</h2>
     <p>Stars start from giant clouds of gas, called <em>nebulae</em> (the singular form in <em>nebula</em>). Nebulae are mostly made up of hydrogen and helium, with traces of heavier elements. This composition is reflected in the composition of stars.</p>
     <img src="/images/astronomy/hubble-crab-nebula.png" alt="The Crab Nebula captured by the Hubble Space Telescope">
-    <p>The gas and other particle clump together to form proto-stars after a period of time.</p>
+    <p>The gas and other particle clump together to form proto-stars after a period of time. These proto-stars will attract each other by gravity.</p>
 </section>
