--- a/astronomy/constellations.html
+++ b/astronomy/constellations.html
@@ -9,3 +9,9 @@ layout: astronomy
     <h2>What is a Constellation?</h2>
     <p>A constellation is a pattern of stars. At many different points in time, different people have identified different constellations. These constellations are often related to mythology.</p>
 </section>
+
+<section>
+    <h2>Asterisms</h2>
+    <p>Astronomers currently recognize 88 constellations as official constellations. All other patterns of stars are officially called asterisms.</p>
+    <p>The difference between asterisms and constellations are that constellations have official boundaries in the sky, while asterisms don't.</p>
+</section>
