--- a/astronomy/constellations.html
+++ b/astronomy/constellations.html
@@ -12,6 +12,6 @@ layout: astronomy
 
 <section>
     <h2>Asterisms</h2>
-    <p>Astronomers currently recognize 88 constellations as official constellations. All other patterns of stars are officially called asterisms.</p>
-    <p>The difference between asterisms and constellations are that constellations have official boundaries in the sky, while asterisms don't.</p>
+    <p>Astronomers currently recognize 88 constellations as official constellations. Some of these constellations are well-known, like Aquarius, Sagittarius, and Gemini, while others such as Apus, Grus, and Volans are more obscure.</p>
+    <p>All other patterns of stars are officially called asterisms. The difference between asterisms and constellations are that constellations have official boundaries in the sky, while asterisms don't. An example of an asterism is the Big Dipper, which is part of the constellation Ursa Major.</p>
 </section>
