--- a/programming/python/data-structures-and-algorithms/searching.html
+++ b/programming/python/data-structures-and-algorithms/searching.html
@@ -9,7 +9,7 @@ permalink: /programming/python/data-structures-and-algorithms/searching/
 
 <section>
     <h2>What is Searching?</h2>
-    <p>In programming, searching is simply looking for an element or a collection of elements in a Data Structure, normally a list. It's like looking for an recipe in a cookbook.</p>
+    <p>In programming, searching is simply looking for an element or a collection of elements in a Data Structure, normally a list. It's like looking for an recipe in a cookbook. THe different algorithms we use for Searching can be simple and complex. It add depends on the Searching method.</p>
     </section>
 
 <section>
