--- a/astronomy/index.html
+++ b/astronomy/index.html
@@ -7,6 +7,6 @@ layout: astronomy
 
 <section>
     <h2>What is Astronomy?</h2>
-    <p>Astronomy is the study of the universe. Astronomers use fields such as math, physics, and chemistry to study things like stars, planets, galaxies, black holes, and much more. Astronomy is one of the most interesting areas of science and new discoveries are being made every day.</p>
+    <p>Astronomy is the study of the universe and space. Astronomers use fields such as math, physics, and chemistry to study things like stars, planets, galaxies, black holes, and much more. Astronomy is one of the most interesting areas of science and new discoveries are being made every day.</p>
     <img src="/images/astronomy/hubble-crab-nebula.png" alt="The Crab Nebula captured by the Hubble Space Telescope">
 </section>
