--- a/astronomy/solar-system/index.html
+++ b/astronomy/solar-system/index.html
@@ -4,3 +4,8 @@ permalink: /astronomy/solar-system/
 layout: astronomy
 ---
 <h1>The Solar System</h1>
+
+<section>
+    <h2>The Sun</h2>
+    <p>The Sun is the center of the Solar System and holds the entire thing together with its gravity. You can learn more about the sun <a href="/astronomy/solar-system/sun/">here</a>.</p>
+</section>
